# SzopInzynierka

./: .gitignore  README.md  funkcjonalnosci.md  instrukcja.md
backend/: .gitignore  .pgpass  Dockerfile  Makefile  docker-compose.yml  notify.py  pyproject.toml  requirements.txt  requirements.txt 16-10-47-102.txt  requirements.txt 16-24-18-970.txt
backend/src/: celerybeat-schedule-shm  celerybeat-schedule-wal  manage.py  openapi.json  requirements.txt 16-10-42-275.txt  stripe.py
backend/src/apps/catalog/: apps.py  filters.py  querysets.py  signals.py  tasks.py  urls.py
backend/src/apps/catalog/admin/: __init__.py  category.py  manufacturer.py  notification_type.py 18-30-32-281.py  product.py  product_delivery.py  product_image.py  product_status.py  supplier.py  tag.py  wishlist.py
backend/src/apps/catalog/migrations/: 0001_initial.py  0002_manufacturer_product_manufacturer.py  0003_wishlistitem.py  0004_notificationpreference_notificationhistory.py  0005_remove_notificationpreference_push_token.py  0006_supplier_productdelivery.py  0007_alter_productimage_image.py  0008_remove_product_catalog_pro_status_1a8990_idx_and_more.py  0009_remove_productimage_alt_text_and_more.py
backend/src/apps/catalog/models/: __init__.py  tag.py  (+10 more)
backend/src/apps/checkout/: apps.py  filters.py  signals.py  urls.py
backend/src/apps/common/: models.py
backend/src/apps/geographic/: admin.py  apps.py  urls.py
backend/src/apps/payments/: models.py  serializers.py  services.py  urls.py  views.py
backend/src/apps/profile/: apps.py  constants.py  permissions.py  signals.py  urls.py
backend/src/shopdjango/: __init__.py  asgi.py  authentication.py  celery.py  middleware.py  pagination.py  settings.py  urls.py  utils.py  wsgi.py
(+328 files in other folders)
